@@ -1,4 +1,7 @@
 Release 0.017:
+    * Fixed ObjectD to handle DGD 1.2.110 changes to ObjRegD.
+    * Changed the login process to handle separate login names and
+      player-readable names.
     * Initial support for LPC telnet code on a binary port
     * Preliminary terminal support, altered Phrase support
     * Started adding subtyped object declarations
